syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.itau.adapters.grpc";
//option java_outer_classname = "LojaCarto";
//option objc_class_prefix = "HLW";

package com.itau.adapters.grpc;

service CommandTransferService {
  rpc sendCommandTransfer (SendCommnandTransferRequest) returns (SendCommnandTransferResponse) {}
}

message SendCommnandTransferRequest {
  int64 sourcePersonId = 1;
  int64 sourceAccountId = 2;
  int64 destinationPersonId = 3;
  int64 destinationAccountId = 4;
  int64 transferValue = 5;
}

message SendCommnandTransferResponse {
  string response = 1;
}